syntax = "proto3";

option go_package="github.com/ahmad-khatib0/go/grpc/grpc-microservices-in-go/resilient/2-ctx-timeout-propagation/order";

message CreateOrderRequest {
  int32 user_id = 1;
  int32 product_id = 2;
  float price = 3;
}

message CreateOrderResponse {
  int32 order_id = 1;
  string product_title = 2;
}

service OrderService {
  rpc Create(CreateOrderRequest) returns (CreateOrderResponse){}
}
