syntax = "proto3";
option go_package="github.com/ahmad-khatib0/go/grpc/resilient/2-ctx-timeout-propagation/product";

message GetProductRequest {
  int32 product_id = 1;
}


message GetProductResponse {
  string title = 1;
}

service ProductService {
  rpc Get(GetProductRequest) returns (GetProductResponse){}
}
